--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <h1 class="hero-title ms-3 mb-0">Hello world</h1>
                                 </div>
 
-                                <h2 class="mb-4">I’m available for freelance work.</h2>
+                                <h2 class="mb-4">I’m Amir Bashir, a Web Developer.</h2>
                                 <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_2">Let's begin</a></p>
                             </div>
                         </div>
@@ -134,16 +134,25 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="about-thumb">
 
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4">
-                                    <h2 class="text-white me-4 mb-0">My Story</h2>
+                                    <h2 class="text-white me-4 mb-0">About Me</h2>
 
                                     <img src="images/happy-bearded-young-man.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
 
-                                <h3 class="pt-2 mb-3">a little bit about Joshua</h3>
+                                <h3 class="pt-2 mb-3">Frontend Developer</h3>
 
-                                <p>This one-page HTML portfolio is provided by <a href="https://templatemo.com" target="_blank">TemplateMo</a>. This layout is based on Bootstrap v5.1.3 CSS and JS libraries. Image credits go to <a href="https://unsplash.com" target="_blank">Unsplash</a> and <a href="https://freepik.com" target="_blank">FreePik</a> for images used in this page.</p>
+                                <p>I am dedicated and keen to enhance my web development
+                                    skills. I am a seasoned web developer with a proven track
+                                    record of crafting engaging online experiences. I have
+                                    honed my skills in front-end development. 
+                                     <a href="https://templatemo.com" target="_blank">TemplateMo</a>. This layout is based on Bootstrap v5.1.3 CSS and JS libraries. Image credits go to <a href="https://unsplash.com" target="_blank">Unsplash</a> and <a href="https://freepik.com" target="_blank">FreePik</a> for images used in this page.</p>
 
-                                <p>You are allowed to use this template for your websites. You are not allowed to redistribute the template ZIP file on any other website. Please <a href="https://templatemo.com/contact" target="_blank">contact us</a> for more info.</p>
+                                <p>I am committed to staying up-to-date with
+                                    the latest trends and frameworks in web development,
+                                    delivering high-quality solutions aligned with client
+                                    requirements. Let's connect and discuss how my web
+                                    development prowess can contribute to your next digital
+                                    venture. Please <a href="https://templatemo.com/contact" target="_blank">contact us</a> for more info.</p>
                             </div>
                         </div>
 
