--- a/index.html
+++ b/index.html
@@ -173,22 +173,22 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="profile-body">
                                     <p>
                                         <span class="profile-small-title">Name</span> 
-                                        <span>Joshua Morgan</span>
+                                        <span>Amir Bashir</span>
                                     </p>
 
                                     <p>
                                         <span class="profile-small-title">Birthday</span> 
-                                        <span>Aug 12, 1986</span>
+                                        <span>sep 30,2000</span>
                                     </p>
 
                                     <p>
                                         <span class="profile-small-title">Phone</span> 
-                                         <span><a href="tel: 305-240-9671">120-240-9600</a></span>
+                                         <span><a href="tel: 305-240-9671">03061602372</a></span>
                                     </p>
 
                                     <p>
                                         <span class="profile-small-title">Email</span> 
-                                        <span><a href="mailto:hello@josh.design">hello@josh.design</a></span>
+                                        <span><a href="mailto:hello@josh.design">amirbashir3676@gmail.com</a></span>
                                     </p>
                                 </div>
                             </div>
@@ -475,22 +475,22 @@ https://templatemo.com/tm-578-first-portfolio
                                     <strong class="site-footer-title d-block mb-3">About</strong>
 
                                     <p class="mb-2">
-                                        Joshua is a professional web developer. Feel free to get in touch with me.
+                                        Amir Bashir  is a professional web developer. Feel free to get in touch with me.
                               </p>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Email</strong>
 
                                     <p>
                                         <a href="mailto:hello@josh.design">
-                                            hello@josh.design
+                                            amirbashir3676@gmail.com
                                         </a>
                                     </p>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Call</strong>
 
                                     <p class="mb-0">
-                                        <a href="tel: 120-240-9600">
-                                            120-240-9600
+                                        <a href="tel: 03061602372">
+                                            03061602372
                                         </a>
                                     </p>
                                 </div>
