--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-7 col-12">
                             <div class="hero-text">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
-                                    <img src="IMG_20230617_085702_915-removebg-preview.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
+                                    <img src="images/happy-bearded-young-man.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
 
-                                    <h1 class="hero-title ms-3 mb-0">Hello world</h1>
+                                    <h1 class="hero-title ms-3 mb-0">Hello Friends</h1>
                                 </div>
 
                                 <h2 class="mb-4">I’m Amir Bashir, a Web Developer.</h2>
