--- a/index.html
+++ b/index.html
@@ -589,9 +589,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <div class="col-lg-12 col-12">
                         <div class="copyright-text-wrap">
                             <p class="mb-0">
-                                <span class="copyright-text">Copyright © 2036 <a href="#">First Portfolio</a> Company. All rights reserved.</span>
-                                Design: 
-                                <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a>
+                                <span class="copyright-text">Copyright © 2036 <a href="#">Amir Bashir</a> Company. All rights reserved.</span>
                             </p>
                         </div>
                     </div>
