--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@ https://templatemo.com/tm-578-first-portfolio
                 </div>
             </div>
         <div class="skill">
-                <p>JQUERY</p>
+                <p>Javascript</p>
                 <div class="skill-bar skill3">
-                <span class="skill-count3">75%</span>
+                <span class="skill-count3">65%</span>
                 </div>
             </div>
         </div>
@@ -256,21 +256,21 @@ https://templatemo.com/tm-578-first-portfolio
 
             <div class="wrapper2">
             <div class="skill">
-                <p>HTML5</p>
+                <p>Php</p>
             <div class="skill-bar skill1">
-                    <span class="skill-count1">95%</span>
+                    <span class="skill-count1">55%</span>
                     </div>
             </div>
         <div class="skill">
-            <p>CSS3</p>
+            <p>Bootstrap</p>
             <div class="skill-bar skill2">
-                <span class="skill-count2">85%</span>
+                <span class="skill-count2">50%</span>
                 </div>
             </div>
         <div class="skill">
                 <p>JQUERY</p>
                 <div class="skill-bar skill3">
-                <span class="skill-count3">75%</span>
+                <span class="skill-count3">45%</span>
                 </div>
             </div>
         </div>
@@ -281,9 +281,16 @@ https://templatemo.com/tm-578-first-portfolio
         <a href="your_cv.pdf" download class="download-button">Download CV</a>
     </div>
         </div>
+
+
         <section class="featured section-padding">
             <div class="container">
                 <div class="row">
+                    <div class="container">
+                        <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
+                           
+                            <h2 class="text-white ms-4 mb-0">Experiance </h2>
+                        </div>
                     
                     <div class="col-lg-24 col-24">
                         <div class="about-thumb">
@@ -356,12 +363,10 @@ https://templatemo.com/tm-578-first-portfolio
         <section class="services section-padding" id="section_3">
             <div class="container">
                 <div class="row">
-
                     <div class="col-lg-10 col-12 mx-auto">
                         <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
                             <img src="images/handshake-man-woman-after-signing-business-contract-closeup.jpg"
                                 class="avatar-image img-fluid" alt="">
-
                             <h2 class="text-white ms-4 mb-0">Services</h2>
                         </div>
 
