--- a/index.html
+++ b/index.html
@@ -547,26 +547,26 @@ https://templatemo.com/tm-578-first-portfolio
                             <strong class="site-footer-title d-block mb-3">Services</strong>
 
                             <ul class="footer-menu">
-                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">Websites</a></li>
+                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">Blog Websites</a></li>
 
-                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">Branding</a></li>
+                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">Shopify</a></li>
 
                                 <li class="footer-menu-item"><a href="#" class="footer-menu-link">Ecommerce</a></li>
 
-                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">SEO</a></li>
+                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">Website SEO</a></li>
                             </ul>
 
                             <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
 
                             <ul class="social-icon">
-                                <li class="social-icon-item"><a href="https://twitter.com/minthu"
+                                <li class="social-icon-item"><a href="https://twitter.com"
                                         class="social-icon-link bi-twitter"></a></li>
 
-                                <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
+                                <li class="social-icon-item"><a href="https://www.instagram.com" class="social-icon-link bi-instagram"></a></li>
 
-                                <li class="social-icon-item"><a href="#" class="social-icon-link bi-pinterest"></a></li>
+                                <li class="social-icon-item"><a href="https://www.pinterest.com" class="social-icon-link bi-pinterest"></a></li>
 
-                                <li class="social-icon-item"><a href="https://www.youtube.com/templatemo"
+                                <li class="social-icon-item"><a href="https://www.youtube.com"
                                         class="social-icon-link bi-youtube"></a></li>
                             </ul>
 
@@ -630,7 +630,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <label class="form-check-label" for="inlineCheckbox1">
                                             <i class="bi-globe form-check-icon"></i>
-                                            <span class="form-check-label-text">Websites</span>
+                                            <span class="form-check-label-text"> Blog Websites</span>
                                         </label>
                                     </div>
                                 </div>
@@ -642,7 +642,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <label class="form-check-label" for="inlineCheckbox2">
                                             <i class="bi-lightbulb form-check-icon"></i>
-                                            <span class="form-check-label-text">Branding</span>
+                                            <span class="form-check-label-text">Shopify</span>
                                         </label>
                                     </div>
                                 </div>
@@ -666,7 +666,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <label class="form-check-label" for="inlineCheckbox4">
                                             <i class="bi-google form-check-icon"></i>
-                                            <span class="form-check-label-text">SEO</span>
+                                            <span class="form-check-label-text">Website SEO</span>
                                         </label>
                                     </div>
                                 </div>
