--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
 
 
-    <title>First Portfolio Bootstrap 5 Theme</title>
+    <title>AMIR BASHIR</title>
 
     <!-- CSS FILES -->
     <link rel="stylesheet" href="css/progress.css">
