--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
     <title>AMIR BASHIR</title>
+    <link rel="icon" type="image/x-icon" href="C:\Users\amirb\Downloads\letter.png">
 
     <!-- CSS FILES -->
     <link rel="stylesheet" href="css/progress.css">
